--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
@@ -15,5 +15,13 @@
         <a href="/login" th:href="@{/login}">Login</a>
     </div>
     -->
+    <!-- sec 확장기능 -->
+    <div sec:authorize-expr="isAuthenticated()">
+        <h2 sec:authentication="name">Name</h2>
+        <a href="/logout" th:href="@{/logout}">Logout</a>
+    </div>
+    <div sec:authorize-expr="!isAuthenticated()">
+        <a href="/login" th:href="@{/login}">Login</a>
+    </div>
 </body>
 </html>
