--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,19 +1,71 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<meta name="_csrf" th:content="${_csrf?.token}" th:if="${_csrf} ne null">
+<meta name="_csrf_header" th:content="${_csrf?.headerName}" th:if="${_csrf} ne null">
+
+<head th:replace="layout/header::userHead"></head>
+<script>
+	function formLogin(e) {
+
+		let username = $("input[name='username']").val().trim();
+		let password = $("input[name='password']").val().trim();
+		let data = {"username": username, "password": password};
+
+		let csrfHeader = $('meta[name="_csrf_header"]').attr('content')
+		let csrfToken = $('meta[name="_csrf"]').attr('content')
+
+		$.ajax({
+			type: "post",
+			url: "/api/login",
+			data: JSON.stringify(data),
+			dataType: "json",
+			beforeSend: function (xhr) {
+				xhr.setRequestHeader(csrfHeader, csrfToken);
+				xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+				xhr.setRequestHeader("Content-type", "application/json");
+			},
+			success: function (data) {
+				console.log(data);
+				window.location = '/';
+
+			},
+			error: function (xhr, status, error) {
+				console.log(error);
+				window.location = '/login?error=true&exception=' + xhr.responseText;
+			}
+		});
+	}
+</script>
+
 <body>
-    <h1>Login</h1>
-    <div th:if="${param.error}">
-        Invalid username or password.
-    </div>
-    <form action="/login" method="post" th:action="@{/login}">
-        <p>Username: <input type="text" name="username" /></p>
-        <p>Password: <input type="password" name="password" /></p>
-        <p>Remember: <input type="checkbox" name="remember-me" /></p>
-        <p><input type="submit" value="Login"></p>
-    </form>
+	<div th:replace="layout/top::header"></div>
+	<div class="container text-center">
+		<div class="login-form d-flex justify-content-center">
+			<div class="col-sm-5" style="margin-top: 30px;">
+				<div class="panel">
+					<p>아이디와 비밀번호를 입력해주세요</p>
+				</div>
+				<div th:if="${param.error}" class="form-group">
+					<span th:text="${exception}" class="alert alert-danger">잘못된 아이디나 암호입니다</span>
+				</div>
+				<form th:action="@{/login_proc}" class="form-signin" method="post">
+					<input type="hidden" th:value="secret" name="secret_key" />
+					<div class="form-group">
+						<input type="text" class="form-control" name="username" placeholder="아이디" required="required"
+							autofocus="autofocus">
+					</div>
+					<div class="form-group">
+						<input type="password" class="form-control" name="password" placeholder="비밀번호"
+							required="required">
+					</div>
+					<button type="button" onclick="formLogin()" id="formbtn"
+						class="btn btn-lg btn-primary btn-block">로그인</button>
+					<!--<button type="submit" class="btn btn-lg btn-primary btn-block">로그인</button>-->
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
